Make sure that default devices are not null

Sometimes at the time when default sink/source change is signalled
by pa, we don't have that device in sinks/sources list yet.
Try to update default devices also when sinks/sources are added and
deleted.

BUG: 366149

Differential Revision: https://phabricator.kde.org/D2824